chore(rag-corpus): backfill v3 frontmatter to 99.8% corpus coverage
- align schema_version: 3 across 2256 CS corpus docs
- enrich concept_id, aliases, symptoms, expected_queries, contextual_chunk_prefix
- populate confusable_with, forbidden_neighbors, source_priority where applicable
- prepare retrieval pipeline inputs without altering doc body content